repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__badge_tiny_repos__nonexistent.snap
---
source: repology-webapp/tests/snapshot_tests/badge_tiny_repos.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 200
Header: content-type: image/svg+xml
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors *; base-uri 'none'; form-action 'self'
Header: referrer-policy: unsafe-url
Header: content-length: 982
---
<svg xmlns="http://www.w3.org/2000/svg" width="104" height="20"><clipPath id="clip"><rect rx="3" width="100%" height="100%" fill="#000"/></clipPath><linearGradient id="grad" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><g clip-path="url(#clip)"><rect width="100%" height="100%" fill="#555"/><rect x="88" y="0" width="16" height="20" fill="#007ec6"/><rect y="0" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="44" y="11" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">in repositories</text><text x="44" y="10" text-anchor="middle" dominant-baseline="central">in repositories</text><text x="96" y="11" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">0</text><text x="96" y="10" text-anchor="middle" dominant-baseline="central">0</text></g></g></svg>
